oxiplate-derive/tests/broken/statements/invalid-statement.stderr
error: Expected one of: default_escaper_group, replace_escaper_group, extends, block, endblock, include, if, elseif, else, endif, for, continue, break, endfor, match, case, endmatch, let
 --> tests/broken/statements/invalid-statement.rs:4:23
  |
4 | #[oxiplate_inline("{% thisdoesntexist %}")]
  |                       ^^^^^^^^^^^^^^^
